<resources>
    <string name="app_name">Qstats</string>
    <string name="timer">Timer</string>
    <string name="stats">Stats</string>
    <string name="profile">Profile</string>
    <string name="url_global" translatable="false">https://stats.quake.com/api/v2/Global</string>
    <string name="url_duel_leads" translatable="false">https://stats.quake.com/api/v2/Leaderboard?from=0&amp;board=duel&amp;season=current</string>
    <string name="url_tdm_leads" translatable="false">https://stats.quake.com/api/v2/Leaderboard?from=0&amp;board=tdm&amp;season=current</string>
    <string name="url_player_stats" translatable="false">https://stats.quake.com/api/v2/Player/Stats</string>
    <string name="url_player_summary" translatable="false">https://stats.quake.com/api/v2/Player/GamesSummary</string>
    <string name="url_player_search" translatable="false">https://stats.quake.com/api/v2/Player/Search</string>
    <string name="global_data">Global data</string>
    <string name="global_champions_usage">Global Champions Usage:</string>
    <string name="global_weapon_usage">Global Weapon Usage:</string>
    <string name="none">none</string>
    <string name="matches">Recent matches</string>
    <string name="victory">Victory</string>
    <string name="defeat">Defeat</string>
    <string name="placeholder">unknown</string>
    <string name="quake_stats_com">Quake.stats.com</string>
    <string name="bethesda_com">Bethesda.com</string>
    <string name="share">Share</string>
    <string name="match_complete">Match Complete</string>
    <string name="win_loss_ratio">Win/Loss Ratio</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="major_pickups">Major Pickups</string>
    <string name="power_pickups">Power Pickups</string>
    <string name="time_played">Time Played</string>
    <string name="kdr">KDR</string>
    <string name="kills">Kills</string>
    <string name="deaths">Deaths</string>
    <string name="avg_lifetime">Avg Lifetime</string>
    <string name="top_duel">TOP DUEL</string>
    <string name="top_2v2_tdm">TOP 2v2 TDM</string>
    <string name="no_matches_played">No Matches Played</string>
    <string name="search_hint">type a nickname &#8230; </string>
    <string name="ability_kills">Ability Kills</string>
    <string name="champions_selector">Champions selector</string>
    <string name="medals">Medals</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="accuracy">Accu- racy</string>
    <string name="kill_hits">Kill/ Hits</string>
    <string name="percent_kills">% Kills</string>
    <string name="damage">Damage</string>
    <string name="weapon">Weapon</string>
    <string name="modes">Modes</string>
    <string name="weapons">Weapons</string>


</resources>